--- a/Camera Demo/src/spring2017ip/CameraView.fxml
+++ b/Camera Demo/src/spring2017ip/CameraView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -7,14 +8,46 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="spring2017ip.CameraViewController">
+<AnchorPane id="AnchorPane" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="spring2017ip.CameraViewController">
    <children>
       <VBox layoutX="14.0" layoutY="14.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
          <children>
-            <ImageView fx:id="imageView" fitHeight="480.0" fitWidth="640.0" pickOnBounds="true" preserveRatio="true" />
+            <HBox>
+               <children>
+                  <VBox>
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                     <children>
+                        <ImageView fx:id="imageView" fitHeight="480.0" fitWidth="640.0" pickOnBounds="true" preserveRatio="true" />
+                        <Label fx:id="statusLabel" maxWidth="1.7976931348623157E308" />
+                     </children>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <ImageView fx:id="frame1View" fitHeight="160.0" fitWidth="214.0" pickOnBounds="true" preserveRatio="true">
+                           <VBox.margin>
+                              <Insets right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </ImageView>
+                        <ImageView fx:id="frame2View" fitHeight="160.0" fitWidth="214.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+                           <VBox.margin>
+                              <Insets bottom="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </ImageView>
+                        <ImageView fx:id="resultView" fitHeight="160.0" fitWidth="214.0" layoutX="10.0" layoutY="190.0" pickOnBounds="true" preserveRatio="true">
+                           <VBox.margin>
+                              <Insets bottom="10.0" />
+                           </VBox.margin>
+                        </ImageView>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
             <ToolBar prefHeight="40.0" prefWidth="200.0">
               <items>
-                <Button mnemonicParsing="false" onAction="#handleImageCaptureAction" text="Capture" />
+                <Button mnemonicParsing="false" onAction="#saveFrame" text="Save Frame" />
+                  <Button mnemonicParsing="false" onAction="#saveSuccessiveFrames" text="Save Successive Frames" />
               </items>
             </ToolBar>
          </children>
